--- a/exp-analise.tex
+++ b/exp-analise.tex
@@ -1,18 +1,18 @@
 \section{Análise comparativa geral}\label{geral}
-Há aplicações com particularidades ou preferências do especialista em que o algoritmo é
-previamente determinado. \ano{exemplos?}
+Há aplicações em que suas particularidades ou preferências do especialista determinam
+previamente o algoritmo de aprendizado. \ano{exemplos?}
 Por outro lado, há aplicações, possivelmente a maioria, em que a escolha é livre
-e só é possível a partir do momento em que o conjunto de treinamento é
+e concretizada idealmente a partir do momento em que o conjunto de treinamento é
 suficientemente grande para a realização de uma validação cruzada \ano{ref?}.
 Para simular esses dois cenários de forma concisa e
 devido à presença de estratégias específicas de um único tipo de aprendiz
 (QBC, EMC, SVMS e SVMB),
 a comparação de estratégias está dividida em quatro partes:
 \begin{itemize}
- \item \textbf{comparação diversa} - compreende algoritmos não vinculados a nenhuma estratégia
+ \item \textbf{comparação com algoritmos variados} - compreende algoritmos não vinculados a nenhuma estratégia
  (5NN, C4.5w, CIELM e NB); incidentalmente, esse critério remove os algoritmos que aparecem
  nos extremos da contagem de posições, deixando a contagem de primeiros
- lugares e últimos lugares mais equilibrada, entre $21$ e $27$ e entre $19$ e $28$, respectivamente;
+e últimos lugares mais equilibrada, entre $21$ e $27$ e entre $19$ e $28$, respectivamente;
  \item \textbf{comparação RFw} - por ser um comitê, o RF viabiliza o uso da estratégia QBC;
   nessa comparação é possível avaliar a existência de benefícios em aplicá-la frente
   às estratégias de uso geral; é possível também observar quais estratégias são adequadas
@@ -24,91 +24,96 @@ a comparação de estratégias está dividida em quatro partes:
   aprendizado ativo e a estratégia específica com ELMs.
   \end{itemize}
 
-\subsection{Comparação diversa}\ref{cdiversa}
+\subsection{Comparação diversa}\label{cdiversa}
 % http://research.cs.wisc.edu/techreports/2009/TR1648.pdf
 Estratégias são normalmente avaliadas por meio de curvas de aprendizado,
-que é o gráfico da medida de interesse em função da quantidade de consultas
+que são os gráficos da medida de interesse em função da quantidade de consultas
 \citep{settles2010active}.
 % Figure 3 presents learning curves for the first 100 instances labeled using
 % uncertainty sampling and random sampling.
 % The reported results are for a logistic regression model averaged over ten folds
 % using cross-validation.
-A Figura \ref{curvas} ilustra o comportamento típico da curva de aprendizado ativo
-e que é seguido por todas as diferentes estratégias.
+O comportamento típico da curva de aprendizado ativo seguido por todas as diferentes estratégias
+é ilustrado na Figura \ref{curvas}
+Apesar da pouca discernibilidade das curvas, a exibição delas para todas as estratégias permite notar
+que elas têm a mesma forma logarítmica, com o valor kappa divergindo na medida em que novos
+exemplos são consultados.
 \input plot
-Apesar de seguirem o mesmo padrão,
-o valor kappa, inicialmente igual para todas as estratégias, passa a divergir
-na medida em que novos exemplos são consultados.
 Se todas as bases tivessem a mesma quantidade de exemplos
 e o aprendizado prosseguisse, as curvas se encontrariam novamente,
 pois tendem ao desempenho passivo.
-% A parada em duzentas consultas se mostrou proveitosa
 
-É possível observar que as curvas ATUmah e TUmah se destacam,
+É possível observar que a curva da DWeuc se destaca negativamente,
 mas comparações de curvas neste gráfico são imprecisas devido aos diferentes
 pesos que as bases podem ter:
 bases mais difíceis tendem a ter um valor mais baixo para kappa e acabam
 sub-representadas.
-\ano{mencionar media e mediana}
-Uma forma de neutralização da desigualdade de pesos é a adoção
-de ranqueamento, conforme mostrado na Figura \ref{curvasrank}.
+Uma forma de neutralização da desigualdade de nível de dificuldade entre as bases é a adoção
+de ranqueamento das médias\footnote{Além das médias,
+um gráfico das medianas também foi elaborado e teve um comportamento praticamente igual.
+% com leves perturbações irrelevantes
+Por motivos de espaço ele foi omitido.}, conforme mostrado na Figura \ref{curvasrank}.
 \input rankplot
-O panorama geral nos dois gráficos é similar, mas a diferença entre eles se acentua com a
-evolução do aprendizado.
-O fato de nem todas as estratégias agnósticas terem sido favorecidas - Rnd e Clu
-permaneceram debaixo da colocação média ($6$) por praticamente todo o intervalo de consultas -
-sugere que a ausência de premissas baseadas no viés do aprendiz não é condição preponderante
-para um bom desempenho em algoritmos de aprendizado variados.
+O fato de nem todas as estratégias agnósticas terem sido favorecidas sugere que a ausência
+de premissas baseadas no viés do aprendiz não é condição preponderante para um bom
+desempenho em algoritmos de aprendizado variados, como  Rnd e Clu que permaneceram
+debaixo da colocação média ($5.5$) por praticamente todo o intervalo de consultas.
 
 Conforme esperado, DWeuc teve o pior desempenho por concentrar as consultas apenas
 nas regiões mais densas e de fronteira, deixando de explorar adequadamente o espaço de exemplos.
-Por outro lado, suas extensões (prefixo TU e ATU) - que evitam regiões densamente rotuladas -
-superaram as demais.
+DWeuc é a estratégia Mar ponderada pela densidade, logo, dada a superioridade de Mar,
+a ponderação por densidade pode ser considerada bastante prejudicial quando não leva em
+conta os exemplos rotulados.
+Por outro lado, as extensões de DW (TU, ATU e GATU) superam as demais, pois ponderam inversamente pela
+densidade de exemplos rotulados evitando, assim, as regiões densamente rotuladas.
 SGmulti, por sua vez, se manteve próximo à colocação média.
-Uma propriedade importante das quatro curvas que ficaram acima da colocação média
-é a inversão entre estratégias gnósticas (TU) e agnósticas (ATU) após aproximadamente
-$75$ exemplos.
-Essa inversão sugere que consultas exploratórias sejam vantajosas no início do
-aprendizado, enquanto que consultas prospectivas passariam a ser proveitosas
-mais tardiamente.
+Um evento importante entre as melhores curvas é a inversão entre a estratégia gnóstica
+TUmah e sua versão agnóstica ATUmah após aproximadamente $90$ exemplos.
+Essa inversão coincide com a intuição de que consultas exploratórias sejam vantajosas no início do
+aprendizado, enquanto que consultas prospectivas passem a ser proveitosas mais tardiamente.
+Assim, uma estratégia como a GATUmah, capaz de migrar entre agnosticidade e gnosticidade,
+pode ter um bom desempenho tanto no início quanto no restante da curva de aprendizado.
+A ascensão de Mar também é um indicativo de que a prospecção é prejudicial no início
+e vantajosa com o avanço do aprendizado.
+A diferença entre EERacu e EERent é um indício de que atacar diretamente a função objetivo
+não é tão eficaz quanto o uso da medida de entropia.
+Nas análises seguintes, as estratégias DWeuc - por ser claramente superada pelas suas extensões - e
+EERacu - por ser melhor representada pela proposta original da EER - foram omitidas.
 
-A significância estatística ($p$-$value$ $=0,01$) \ano{tá certa essa notação?}
-das diferenças pode ser verificada pela comparação dos valores de ALCKappa para todas as bases
-na Tabela \ref{stratsALCKappaFriedAllRedux}.
-A ALCKappa foi calculada sobre $200$ exemplos nas bases com tamanho suficiente
-ou $|\mathcal{U}|$ nas demais.
-DWeuc perde de todas exceto Rnd.
-As estratégias com prefixo TU e ATU são superiores às demais e SGmulti superou as
-duas amostragens aleatórias.
-Se forem consideradas apenas as primeiras 100 consultas -
-%150 conf/emnlp/SettlesC08
-valor arbitrário frequentemente adotado em outros trabalhos
-\citep{journals/pieee/CrawfordTY13,chermanaprendizado,conf/nips/SettlesCR07,conf/icml/RoyM01} -
-Clu deixa de perder para Mar, EERent e SGmulti; e
-SGmulti passa a vencer EERacu com maior significância
-% as variantes agnósticas propostas superam os algoritmos originais e SGmulti passa a superar Mar e EERacu, porém com menor significância estatística,
-conforme Tabela \ref{stratsALCKappaFriedAllReduxHalf}.
-\input stratsALCKappaFriedAllRedux
-\input stratsALCKappaFriedAllReduxHalf
-\input stratsALCKappaFriedAllRedux50
+Para confirmar as conclusões com segurança estatística, os níveis de confiança
+($p \in \{0,01; 0,05; 0,10\}$), na Tabela \ref{stratsALCKappaFriedAllReduxall}, indicam
+quando uma estratégia na linha é melhor que a outra na coluna.
+O critério de vitória é baseado na comparação dos valores da ALC-kappa para todas as bases.
+A medida foi calculada com $200$ exemplos nas bases de tamanho suficiente
+e $|\mathcal{U}|$ nas demais.
+\input stratsmahALCKappaFriedAllReduxall
+Como um indicativo da viabilidade do aprendizado ativo em geral, Rnd perde de todas exceto Clu.
+Ainda assim, o princípio teórico de Clu, que garante um desempenho que não seja pior que a
+amostragem aleatória, manteve-se válido.
+Dentre as melhores estratégias, a proposta GATUmah é a preferível, pois além de se equiparar
+às outras ela foi superior à Mar - ainda que com baixo nível de confiança (com $p=0,10$).
 
-Assim, as estratégias propostas podem ser consideradas superiores à não aplicação
-de aprendizado ativo (Rnd) e a algumas estratégias relevantes apesar de ATUman e ATUmah
-somente terem superado suas versões originais nos orçamentos abaixo de $50$ exemplos \ano{quantidade máxima antes que
-o tamanho das bases permita ALCs de tamanhos diferentes}
-- conforme Tabela \ref{stratsALCKappaFriedAllRedux50}.
+% Se forem consideradas apenas as primeiras 100 consultas -
+% %150 conf/emnlp/SettlesC08
+% valor arbitrário frequentemente adotado em outros trabalhos
+% \citep{journals/pieee/CrawfordTY13,chermanaprendizado,conf/nips/SettlesCR07,conf/icml/RoyM01} -
+% A comparação passa a ser como na Tabela \ref{stratsALCKappaFriedAllReduxHalf}.
+% \input stratsmanALCKappaFriedAllReduxall
+% \input stratseucALCKappaFriedAllReduxall
+% conforme Tabela \ref{stratsALCKappaFriedAllReduxHalf}.
+% $50$ exemplos: quantidade máxima antes que o tamanho das bases permita ALCs de tamanhos diferentes
+% - conforme Tabela \ref{stratsALCKappaFriedAllRedux50}.
 Em aplicações reais, entretanto, a estabilidade do algoritmo pode ser mais importante
 do que o desempenho preditivo médio, pois uma grande variabilidade pode colocar o
 orçamento sob o risco de ser gasto sem atingir um desempenho adequado e pode levar a custos
 de rotulação imprevisíveis.
 O processo de rotulação ocorre apenas uma vez em uma dada reserva de exemplos
-até o término do orçamento,
-impossibilitando novas tentativas.
+até o término do orçamento, impossibilitando novas tentativas.
 Assim, a estabilidade da estratégia tem fundamental importância para a análise do risco financeiro
 da aplicação.
 De forma análoga às curvas apresentadas para o valor médio de kappa e o ranqueamento
 correspondente, dois conjuntos de curvas baseadas no desvio padrão do valor de kappa foram
-construídos visando ilustrar o comportamento da variância preditiva ao longo de sucessivos
+construídos visando ilustrar o comportamento da variância preditiva a cada instante ao longo de sucessivos
 valores de orçamento.
 Na Figura \ref{curvasdesvio}, é possível observar que as quatro estratégias agnósticas
 \input plotRisco
