--- a/rankplot.tex
+++ b/rankplot.tex
@@ -7,22 +7,19 @@
 \begin{axis}[xlabel=consultas, ylabel=colocação, legend style={at={(0.95,0.5)}, anchor=west}, grid = both,
 scale only axis, width=300, y dir=reverse, yticklabel style={/pgf/number format/fixed}]
 
-% \addplot+[solid, thick, black, mark=10-pointed star,   mark phase=119, mark options={solid, scale=1.9}, mark repeat=200] table[x=budget, y=GATUman] {kappamediaallReduxRank.plot};\addlegendentry{\textbf{GATUman}}
-\addplot+[solid, thick, black, mark=10-pointed star,   mark phase=119, mark options={solid, scale=1.9}, mark repeat=200] table[x=budget, y=GATUmah] {kappamediaallReduxRank.plot};\addlegendentry{\textbf{GATUmah}}
-% \addplot+[solid, gray, mark=square,   mark phase=95, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=TUman] {kappamediaallReduxRank.plot};\addlegendentry{TUman}
-\addplot+[solid, gray, mark=square,   mark phase=95, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=TUmah] {kappamediaallReduxRank.plot};\addlegendentry{TUmah}
+\addplot+[solid, thick, violet, mark=10-pointed star,   mark phase=84, mark options={solid, scale=1.9}, mark repeat=200] table[x=budget, y=GATUmah] {kappamahmediaallReduxRank.plot};\addlegendentry{\textbf{GATUmah}}
+\addplot+[solid, gray, mark=square,   mark phase=95, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=TUmah] {kappamahmediaallReduxRank.plot};\addlegendentry{TUmah}
 
-\addplot+[solid, blue, mark=*,   mark phase=143, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=Mar] {kappamediaallReduxRank.plot};\addlegendentry{Mar}
-% \addplot+[dotted, ultra thick, orange,  mark repeat=200,  mark phase=71, mark options={solid, scale=1.9}, mark repeat=200]] table[x=budget, y=ATUman] {kappamediaallReduxRank.plot};\addlegendentry{\textbf{ATUman}}
-\addplot+[dotted, ultra thick, orange,  mark repeat=200,  mark phase=71, mark options={solid, scale=1.9}, mark repeat=200] table[x=budget, y=ATUmah] {kappamediaallReduxRank.plot};\addlegendentry{\textbf{ATUmah}}
+\addplot+[solid, blue, mark=*,   mark phase=143, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=Mar] {kappamahmediaallReduxRank.plot};\addlegendentry{Mar}
+\addplot+[dotted, mark=star, ultra thick, orange,  mark repeat=200,  mark phase=25, mark options={solid, scale=1.9}, mark repeat=200] table[x=budget, y=ATUmah] {kappamahmediaallReduxRank.plot};\addlegendentry{\textbf{ATUmah}}
 
-\addplot+[solid, green!30!black, mark=square*,   mark phase=179, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=EERent] {kappamediaallReduxRank.plot};\addlegendentry{EERent}
-\addplot+[solid, thick, red,   mark=star,     mark phase=131, mark options={solid, scale=1.9}, mark repeat=200] table[x=budget, y=SGmulti] {kappamediaallReduxRank.plot};\addlegendentry{\textbf{SGmulti}}
-\addplot+[solid, thick, black, mark=square,   mark phase=167, mark options={solid, scale=1.9}, mark repeat=200] table[x=budget, y=EERacu] {kappamediaallReduxRank.plot};\addlegendentry{EERacu}
+\addplot+[solid, green!30!black, mark=square*,   mark phase=62, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=EERent] {kappamahmediaallReduxRank.plot};\addlegendentry{EERent}
+\addplot+[solid, thick, red,   mark=x,     mark phase=131, mark options={solid, scale=1.9}, mark repeat=200] table[x=budget, y=SGmulti] {kappamahmediaallReduxRank.plot};\addlegendentry{\textbf{SGmulti}}
+\addplot+[solid, thick, black, mark=diamond,   mark phase=167, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=EERacu] {kappamahmediaallReduxRank.plot};\addlegendentry{EERacu}
 
-\addplot+[dashed, green!50!black, mark=triangle*,   mark phase=47, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=Clu] {kappamediaallReduxRank.plot};\addlegendentry{Clu}
-\addplot+[dashed, olive,            mark=triangle,     mark phase=35, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=Rnd] {kappamediaallReduxRank.plot};\addlegendentry{Rnd}
-\addplot+[solid, black, mark=pentagon,   mark phase=155, mark options={solid, thick, scale=1.4}, mark repeat=200] table[x=budget, y=DWeuc] {kappamediaallReduxRank.plot};\addlegendentry{DWeuc}
+\addplot+[dashed, green!50!black, mark=triangle*,   mark phase=47, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=Clu] {kappamahmediaallReduxRank.plot};\addlegendentry{Clu}
+\addplot+[dashed, olive,            mark=triangle,     mark phase=35, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=Rnd] {kappamahmediaallReduxRank.plot};\addlegendentry{Rnd}
+\addplot+[solid, black, mark=pentagon,   mark phase=155, mark options={solid, thick, scale=1.4}, mark repeat=200] table[x=budget, y=DWeuc] {kappamahmediaallReduxRank.plot};\addlegendentry{DWeuc}
 
 \end{axis}
 \end{tikzpicture}
@@ -31,35 +28,28 @@ scale only axis, width=300, y dir=reverse, yticklabel style={/pgf/number format/
 
 
 
-
-\begin{figure}
-\caption{Curvas de ranqueamento.
- \textit{Detalhes na Figura \ref{curvas}.}}
-\label{curvasrank}
-\begin{center}
-\begin{tikzpicture}[scale=1]
-\begin{axis}[xlabel=consultas, ylabel=colocação, legend style={at={(0.95,0.5)}, anchor=west}, grid = both,
-scale only axis, width=300, y dir=reverse, yticklabel style={/pgf/number format/fixed}]
-
-\addplot+[solid, thick, black, mark=10-pointed star,   mark phase=119, mark options={solid, scale=1.9}, mark repeat=200] table[x=budget, y=GATUman] {kappamediaallReduxRank.plot};\addlegendentry{\textbf{GATUman}}
-% \addplot+[solid, thick, black, mark=10-pointed star,   mark phase=119, mark options={solid, scale=1.9}, mark repeat=200] table[x=budget, y=GATUmah] {kappamediaallReduxRank.plot};\addlegendentry{\textbf{GATUmah}}
-\addplot+[solid, gray, mark=square,   mark phase=95, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=TUman] {kappamediaallReduxRank.plot};\addlegendentry{TUman}
-% \addplot+[solid, gray, mark=square,   mark phase=95, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=TUmah] {kappamediaallReduxRank.plot};\addlegendentry{TUmah}
-
-\addplot+[solid, blue, mark=*,   mark phase=143, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=Mar] {kappamediaallReduxRank.plot};\addlegendentry{Mar}
-\addplot+[dotted, ultra thick, orange,  mark repeat=200,  mark phase=71, mark options={solid, scale=1.9}, mark repeat=200] table[x=budget, y=ATUman] {kappamediaallReduxRank.plot};\addlegendentry{\textbf{ATUman}}
-% \addplot+[dotted, ultra thick, orange,  mark repeat=200,  mark phase=71, mark options={solid, scale=1.9}, mark repeat=200] table[x=budget, y=ATUmah] {kappamediaallReduxRank.plot};\addlegendentry{\textbf{ATUmah}}
-
-\addplot+[solid, green!30!black, mark=square*,   mark phase=179, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=EERent] {kappamediaallReduxRank.plot};\addlegendentry{EERent}
-\addplot+[solid, thick, red,   mark=star,     mark phase=131, mark options={solid, scale=1.9}, mark repeat=200] table[x=budget, y=SGmulti] {kappamediaallReduxRank.plot};\addlegendentry{\textbf{SGmulti}}
-\addplot+[solid, thick, black, mark=square,   mark phase=167, mark options={solid, scale=1.9}, mark repeat=200] table[x=budget, y=EERacu] {kappamediaallReduxRank.plot};\addlegendentry{EERacu}
-
-\addplot+[dashed, green!50!black, mark=triangle*,   mark phase=47, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=Clu] {kappamediaallReduxRank.plot};\addlegendentry{Clu}
-\addplot+[dashed, olive,            mark=triangle,     mark phase=35, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=Rnd] {kappamediaallReduxRank.plot};\addlegendentry{Rnd}
-\addplot+[solid, black, mark=pentagon,   mark phase=155, mark options={solid, thick, scale=1.4}, mark repeat=200] table[x=budget, y=DWeuc] {kappamediaallReduxRank.plot};\addlegendentry{DWeuc}
-
-\end{axis}
-\end{tikzpicture}
-\end{center}
-\end{figure}
-\newpage
+% \begin{figure}
+% \caption{Curvas de ranqueamento.
+%  \textit{Detalhes na Figura \ref{curvas}.}}
+% \label{curvasrank}
+% \begin{center}
+% \begin{tikzpicture}[scale=1]
+% \begin{axis}[xlabel=consultas, ylabel=colocação, legend style={at={(0.95,0.5)}, anchor=west}, grid = both,
+% scale only axis, width=300, y dir=reverse, yticklabel style={/pgf/number format/fixed}]
+% 
+% % \addplot+[solid, thick, violet, mark=10-pointed star,   mark phase=84, mark options={solid, scale=1.9}, mark repeat=200] table[x=budget, y=GATUmah] {kappaallmediaallReduxRank.plot};\addlegendentry{\textbf{GATUmah}}
+% % \addplot+[solid, gray, mark=square,   mark phase=95, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=TUmah] {kappaallmediaallReduxRank.plot};\addlegendentry{TUmah}
+% % \addplot+[dotted, mark=star, ultra thick, orange,  mark repeat=200,  mark phase=25, mark options={solid, scale=1.9}, mark repeat=200] table[x=budget, y=ATUmah] {kappaallmediaallReduxRank.plot};\addlegendentry{\textbf{ATUmah}}
+% 
+% \addplot+[solid, blue, mark=*,   mark phase=143, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=GATUman] {kappaallmediaallReduxRank.plot};\addlegendentry{GATUman}
+% \addplot+[solid, green!30!black, mark=square*,   mark phase=62, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=ATUman] {kappaallmediaallReduxRank.plot};\addlegendentry{ATUman}
+% \addplot+[solid, thick, red,   mark=x,     mark phase=131, mark options={solid, scale=1.9}, mark repeat=200] table[x=budget, y=TUman] {kappaallmediaallReduxRank.plot};\addlegendentry{\textbf{TUman}}
+% 
+% \addplot+[dashed, green!50!black, mark=triangle*,   mark phase=47, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=GATUeuc] {kappaallmediaallReduxRank.plot};\addlegendentry{GATUeuc}
+% \addplot+[dashed, olive,            mark=triangle,     mark phase=35, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=ATUeuc] {kappaallmediaallReduxRank.plot};\addlegendentry{ATUeuc}
+% \addplot+[solid, thick, black, mark=diamond,   mark phase=167, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=TUeuc] {kappaallmediaallReduxRank.plot};\addlegendentry{TUeuc}
+% 
+% \end{axis}
+% \end{tikzpicture}
+% \end{center}
+% \end{figure}
