--- a/stratsALCKappaFriedAllReduxhalf.tex
+++ b/stratsALCKappaFriedAllReduxhalf.tex
@@ -3,14 +3,14 @@
 \begin{center}\begin{tabular}{lcc|cc|cc|cc|c}
  			& 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9\\
 1 - Rnd  	& - &   &   &   &   &   &   &   &   \\
-2 - Clu  	&   & - &   &   &   &   &   & + &   \\ \hline
+2 - Clu  	&   & - &   &   &   &   &   &   &   \\ \hline
 3 - \textbf{ATUmah}	& * & * & - &   & * & * &   & * &   \\
 4 - \textbf{GATUmah}	& * & * &   & - & * & * &   & * &   \\ \hline
-5 - \textbf{SGmulti}	&   &   &   &   & - &   &   & + &   \\
-6 - Mar  	&   &   &   &   &   & - &   & . &   \\ \hline
+5 - \textbf{SGmulti}	& * &   &   &   & - &   &   & * &   \\
+6 - Mar  	& * &   &   &   &   & - &   & * &   \\ \hline
 7 - TUmah	& * & * &   &   & * & * & - & * &   \\
 8 - EERacu	&   &   &   &   &   &   &   & - &   \\ \hline
-9 - EERent	& * & + &   &   & + & + &   & * & - \\\end{tabular}
-\label{stratsALCKappaFriedAllRedux50}
+9 - EERent	& * & * &   &   &   &   &   & * & - \\\end{tabular}
+\label{stratsALCKappaFriedAllReduxhalf}
 \end{center}
 \end{table}
