--- a/classifsFried.tex
+++ b/classifsFried.tex
@@ -8,7 +8,7 @@
 4 - ELM  	&   &   &   & - &   &   &   \\ \hline
 5 - NB   	&   &   &   &   & - &   &   \\
 6 - RFw  	& * & * & * & * & * & - &   \\ \hline
-7 - SVM  	& + & + &   & * & + &   & - \\\end{tabular}
+7 - SVM  	& . & + &   & * & + &   & - \\\end{tabular}
 \label{tab:friedClassif}
 \end{center}
 \end{table}
