--- a/experimentos.tex
+++ b/experimentos.tex
@@ -93,7 +93,6 @@ A distribuição das vitórias dos diferentes classificadores ao longo das bases de
 indica a existência de diversidade de viés.
 Assim, a adoção dos algoritmos é mais representativa do que
 apenas um único algoritmo arbitrário.
-\ano{atualizar contagem e fried depois que ELM terminar mushroom}
 % \input classifsFried
 \begin{table}[h]
 \caption{\textbf{Um contra um e contagem de posições}.
@@ -114,12 +113,12 @@ desempenho que o algoritmo na coluna com intervalo de confiança de 0.99/0.95/0.9
 \begin{tabular}{lcc}
 algoritmo & \makecell{primeiros\\lugares} & \makecell{últimos\\lugares} \\
 \hline
-RFw        &    20       &              3       \\
+RFw        &    21       &              3       \\
 SVM        &    20       &              8       \\
-5NN        &    16       &              21      \\
-NB         &    14       &              23      \\
+5NNa       &    17       &              21      \\
+NB         &    14       &              24      \\
 CIELM      &    12       &              9       \\
-C4.5w      &    10       &              13      \\
+C4.5w      &    11       &              13      \\
 ELM        &    4        &              16      \\
 \label{tab:friedClassif}
 \end{tabular}
