--- a/passiveDists.tex
+++ b/passiveDists.tex
@@ -1,13 +1,12 @@
 \begin{table}[h]
-\caption{Similaridade entre algoritmos de aprendizado de acordo com a acurácia balanceada para as 94 bases de dados. O maior e o menor valor de cada linha está em \textcolor{blue}{\textbf{azul}} e \textcolor{red}{\textbf{vermelho}} respectivamente. Valores iguais ou acima de $0,50$ estão em negrito.}
-\begin{center}\begin{tabular}{lcc|cc|cc|cc}
- 				& 5NN & C4.5w & CIELM & ELM & NB & RFw & SVM & VFDT \\5NN	& - &   0.47 & \textbf{  0.53} & \textbf{  0.50} &   0.46 & \textbf{  0.53} & \textcolor{blue}{\textbf{  0.55}} & \textcolor{red}{\textbf{  0.44}} \\
-C4.5w	&   0.47 & - &   0.48 &   0.47 & \textcolor{blue}{\textbf{  0.55}} & \textbf{  0.51} & \textbf{  0.50} & \textcolor{red}{\textbf{  0.43}} \\ \hline
-CIELM	& \textbf{  0.53} &   0.48 & - & \textcolor{blue}{\textbf{  0.64}} &   0.47 & \textcolor{red}{\textbf{  0.46}} & \textbf{  0.51} & \textcolor{red}{\textbf{  0.46}} \\
-ELM	& \textbf{  0.50} &   0.47 & \textcolor{blue}{\textbf{  0.64}} & - & \textcolor{red}{\textbf{  0.42}} &   0.45 & \textbf{  0.50} & \textcolor{red}{\textbf{  0.42}} \\ \hline
-NB	&   0.46 & \textcolor{blue}{\textbf{  0.55}} &   0.47 & \textcolor{red}{\textbf{  0.42}} & - &   0.47 &   0.46 &   0.47 \\
-RFw	& \textbf{  0.53} & \textbf{  0.51} &   0.46 &   0.45 &   0.47 & - & \textcolor{blue}{\textbf{  0.62}} & \textcolor{red}{\textbf{  0.40}} \\ \hline
-SVM	& \textbf{  0.55} & \textbf{  0.50} & \textbf{  0.51} & \textbf{  0.50} &   0.46 & \textcolor{blue}{\textbf{  0.62}} & - & \textcolor{red}{\textbf{  0.43}} \\
-VFDT	&   0.44 &   0.43 &   0.46 &   0.42 & \textcolor{blue}{\textbf{  0.47}} & \textcolor{red}{\textbf{  0.40}} &   0.43 & - \\ \hline\end{tabular}\label{passiveDists}
+\caption{Similaridade entre algoritmos de aprendizado de acordo com a acurácia balanceada para as 94 bases de dados. O maior e o menor valor de cada linha está em \textcolor{blue}{\textbf{azul}} e \textcolor{red}{\textbf{vermelho}} respectivamente.}
+\begin{center}\begin{tabular}{lcc|cc|cc|c}
+ 				& 5NN & C4.5w & CIELM & ELM & NB & RFw & SVM \\5NN	& - &   0.47 & \textbf{  0.53} & \textbf{  0.50} & \textcolor{red}{\textbf{  0.46}} & \textbf{  0.53} & \textcolor{blue}{\textbf{  0.55}} \\
+C4.5w	& \textcolor{red}{\textbf{  0.47}} & - &   0.48 & \textcolor{red}{\textbf{  0.47}} & \textcolor{blue}{\textbf{  0.55}} & \textbf{  0.51} & \textbf{  0.50} \\ \hline
+CIELM	& \textbf{  0.53} &   0.48 & - & \textcolor{blue}{\textbf{  0.64}} &   0.47 & \textcolor{red}{\textbf{  0.46}} & \textbf{  0.51} \\
+ELM	& \textbf{  0.50} &   0.47 & \textcolor{blue}{\textbf{  0.64}} & - & \textcolor{red}{\textbf{  0.42}} &   0.45 & \textbf{  0.50} \\ \hline
+NB	&   0.46 & \textcolor{blue}{\textbf{  0.55}} &   0.47 & \textcolor{red}{\textbf{  0.42}} & - &   0.47 &   0.46 \\
+RFw	& \textbf{  0.53} & \textbf{  0.51} &   0.46 & \textcolor{red}{\textbf{  0.45}} &   0.47 & - & \textcolor{blue}{\textbf{  0.62}} \\ \hline
+SVM	& \textbf{  0.55} & \textbf{  0.50} & \textbf{  0.51} & \textbf{  0.50} & \textcolor{red}{\textbf{  0.46}} & \textcolor{blue}{\textbf{  0.62}} & - \\\end{tabular}\label{passiveDists}
 \end{center}
 \end{table}
